# rust_nickname_generater

./: Cargo.toml  README.md  build_github_docs.sh  clippy.sh
.devcontainer/: devcontainer.json
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/rust_nickname_generater/: all.html  fn.generate_name.html  fn.generate_random_name.html  fn.get_all_template_examples.html  fn.get_all_template_names.html  fn.get_all_templates.html  fn.get_template_by_name.html  fn.get_templates_of_type.html  index.html  sidebar-items.js
docs/rust_nickname_generater/error/: enum.Error.html  index.html  type.Result.html
docs/rust_nickname_generater/template_struct/: enum.NameType.html  index.html  sidebar-items.js  struct.NameInfo.html  struct.NameTemplate.html
docs/rust_nickname_generater/templates/: constant.FUNCTION_TEMPLTES.html  constant.FUNCTION_VARIABLE_TEMPLTES.html  constant.MACRO_TEMPLTES.html  constant.VARIABLE_TEMPLTES.html  index.html  sidebar-items.js
docs/src/rust_nickname_generater/: error.rs.html  lib.rs.html  template_struct.rs.html  templates.rs.html
src/: error.rs  lib.rs  template_struct.rs  templates.rs
