[package]
name = "rust_nickname_generater"
description = "A rust library that generates user/nick names based on the rust language"
repository = "https://github.com/BuyMyMojo/rust_nickname_generater"
version = "1.0.6"
homepage = "https://buymymojo.github.io/rust_nickname_generater"
edition = "2021"
authors = ["BuyMyMojo <hello@buymymojo.net>"]
license = "Apache-2.0"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml", "Cargo.lock"]
keywords = ["nickname", "username", "generator"]
categories = ["text-processing", "template-engine"]

[features]
default = []
custom_templates = []
example_custom_template = ["custom_templates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
new_string_template = "1.4.0"
once_cell = "1.13.1"
rand = "0.8.5"
regex = "1.6.0"
# tracing = "0.1.36"

[profile.release]
lto = "thin"
